@@ -31,6 +31,8 @@ New features:
     scheduled.
   * Small CUDA allocations (<= 4MiB) are now batched to avoid the huge
     cudaMalloc overhead.
+  * Prefetching is now done for all schedulers when it can be done whatever
+    the scheduling decision.
 
 Small features:
   * New function starpu_perfmodel_directory() to print directory
